# MD-SDVRP

./: README.md  data_create.cpp  run_all.py
APPX/code/: CMakeLists.txt  main.cpp
APPX/code/blossom/: PMduals.cpp
MD-SDVRP/: CMakeLists.txt  README.md
MD-SDVRP/Result/G_set/: g1_1_pGW.txt  g1_1_pMatch.txt  g1_2_pGW.txt  g1_2_pMatch.txt  g1_3_pGW.txt  g1_3_pMatch.txt  g1_4_pGW.txt  g1_4_pMatch.txt  g2_1_pGW.txt  g2_1_pMatch.txt  g2_2_pGW.txt  g2_2_pMatch.txt  g2_3_pGW.txt  g2_3_pMatch.txt  g2_4_pGW.txt  g2_4_pMatch.txt  g3_1_pGW.txt  g3_1_pMatch.txt  g3_2_pGW.txt  g3_2_pMatch.txt  g3_3_pGW.txt  g3_3_pMatch.txt  g3_4_pGW.txt  g3_4_pMatch.txt  g4_1_pGW.txt  g4_1_pMatch.txt  g4_2_pGW.txt  g4_2_pMatch.txt  g4_3_pGW.txt  g4_3_pMatch.txt  g4_4_pGW.txt  g4_4_pMatch.txt  g5_1_pGW.txt  g5_1_pMatch.txt  g5_2_pGW.txt  g5_2_pMatch.txt  g5_3_pGW.txt  g5_3_pMatch.txt  g5_4_pGW.txt  g5_4_pMatch.txt
MD-SDVRP/Result/P_set/: p01_pGW.txt  p01_pMatch.txt  p04_pGW.txt  p04_pMatch.txt  p05_pGW.txt  p05_pMatch.txt  p07_pGW.txt  p07_pMatch.txt  p08_pGW.txt  p08_pMatch.txt  p10_pGW.txt  p10_pMatch.txt  p12_pGW.txt  p12_pMatch.txt  p13_pGW.txt  p13_pMatch.txt  p14_pGW.txt  p14_pMatch.txt  p18_pGW.txt  p18_pMatch.txt  p19_pGW.txt  p19_pMatch.txt  p20_pGW.txt  p20_pMatch.txt  pr02_pGW.txt  pr02_pMatch.txt  pr03_pGW.txt  pr03_pMatch.txt  pr04_pGW.txt  pr04_pMatch.txt  pr08_pGW.txt  pr08_pMatch.txt  pr09_pGW.txt  pr09_pMatch.txt  pr10_pGW.txt  pr10_pMatch.txt
MD-SDVRP/Result/k=2/: SD10_pGW.txt  SD10_pMatch.txt  SD11_pGW.txt  SD11_pMatch.txt  SD12_pGW.txt  (+37 more)
MD-SDVRP/SRC/: MDSDVRP.cpp
(+387 files in other folders)
